--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -12,6 +12,7 @@
                 <!-- <li><a>Templates</a></li> -->
                 <li><a class="navigate" [routerLink]="['email-config']">Email Configuration</a></li>
                 <li><a class="navigate" [routerLink]="['settings']">Settings</a></li>
+                <li><a class="navigate" [routerLink]="['add-template']">Add Template</a></li>
             </ul>
         </div>
     </div>
