--- a/src/app/pages/dashboard/new-mail/new-mail.component.css
+++ b/src/app/pages/dashboard/new-mail/new-mail.component.css
@@ -68,6 +68,7 @@
   
   .fields{
     display: flex;
+    overflow-y: scroll;
     flex-direction: column;
     gap: 20px;
   }
@@ -91,8 +92,8 @@
     transition: border-color 0.15s ease-in-out;
     resize: vertical;
     /* min-height: 8vh; */
-    height: 70vh;
-    max-height: 80vh;
+    /* height: 70vh; */
+    /* max-height: 80vh; */
   
     &:focus {
       outline: none;
@@ -112,4 +113,54 @@
     border: 0;
     border-radius: 10px;
     cursor: pointer;
+  }
+
+  .head{
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
+  }
+
+  .head span {
+    background-color: #000;
+    color: #fff;
+    font-size: 13px;
+    padding: 7px 10px;
+    border-radius: 8px;
+    cursor: pointer;
+  }
+
+  .field-template{
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+  }
+ 
+  .all-templates{
+    width: 100%;
+    /* height: 100%; */
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    overflow-y: scroll;
+    grid-gap: 30px 10px;
+  }
+
+  .card{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    cursor: pointer;
+  }
+  
+  .card img{
+    width: 100%;
+    height: 25vh;
+    object-fit: cover;
+    border-radius: 15px;
+    border: 1px solid #ddd;
+  }
+
+  .card span{
+    font-size: 13px;
+    font-weight: 500;
   }
