--- a/src/app/pages/dashboard/sent/components/sent-email/sent-email.component.css
+++ b/src/app/pages/dashboard/sent/components/sent-email/sent-email.component.css
@@ -7,12 +7,13 @@
 
 .content{
     width: 100%;
+    height: 100%;
     overflow-y: scroll;
 }
 
 .subject{
     width: 100%;
     height: auto;
-    margin-block-start: 20px;
+    margin-block-start: 30px;
     border-bottom: 1px solid grey;
 }
