--- a/src/app/pages/dashboard/sent/components/sent-email/sent-email.component.html
+++ b/src/app/pages/dashboard/sent/components/sent-email/sent-email.component.html
@@ -1,9 +1,22 @@
-<div class="email">
-    <div class="subject">
-        <h3>{{email.subject}}</h3>
-    </div>
-    <div class="to">
-        <span>{{email.to[0]}}</span>
-    </div>
-    <div class="content" [innerHTML]="sanitizedMessage(email.message)"></div>
-</div>
+<div class="px-4 py-6">
+    <ng-container *ngIf="email; else noEmailSelected">
+      <div class="email bg-white border border-gray-300 rounded-md p-4">
+        <div class="subject">
+          <h3 class="text-gray-800 font-bold text-lg">{{ email.subject }}</h3>
+        </div>
+        <div class="to mt-2">
+          <app-dropdown [options]="email.toEmails" [placeholder]="email.toEmails[0]"/>
+        </div>
+        <div class="content" [innerHTML]="sanitizedMessage(email.htmlContent)"></div>
+      </div>
+    </ng-container>
+
+    <ng-template #noEmailSelected>
+      <div class="bg-gray-100 border border-gray-300 rounded-md p-4 flex items-center justify-center">
+        <svg class="h-8 w-8 text-gray-500 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4" />
+        </svg>
+        <span class="text-gray-600 font-medium">No Email Selected</span>
+      </div>
+    </ng-template>
+  </div>
