--- a/src/app/pages/dashboard/sent/components/sent-email/sent-email.component.css
+++ b/src/app/pages/dashboard/sent/components/sent-email/sent-email.component.css
@@ -1,13 +1,20 @@
 /* Email Content */
 
+.container{
+    width: 50vw;
+}
+
 .email{
     width: 100%;
-    height: 100%;
+    height: 90vh;
+    /* overflow-y: scroll; */
+    margin-block-end: 100px;
 }
 
 .content{
     width: 100%;
     height: 100%;
+    max-height: 70vh;
     overflow-y: scroll;
 }
 
