--- a/src/app/pages/dashboard/sent/sent.component.html
+++ b/src/app/pages/dashboard/sent/sent.component.html
@@ -2,20 +2,28 @@
     <div class="sent-nav">
         <div class="head">
             <h3>All Sent Emails</h3>
-            <input type="search" placeholder="Search">
+            <input type="search" [(ngModel)]="key" (input)="findEmail(key)" placeholder="Search">
         </div>
         <div class="sent-emails">
             @for (item of sentEmails; track $index) {
-                <div [routerLink]="['/dashboard/sent']" [queryParams]="{id: item.id}" class="email-card">
-                    <div class="top-details">
-                        <div class="to-subject">
-                            <h4 class="truncate-sentence">{{item.subject}}</h4>
-                            <span class="truncate-sentence">{{item.toEmails}}</span>
+                @if(isLoading){
+                    <span>isLoading</span>
+                    <app-loader/>
+                    <p-skeleton width="100%" height="7rem" />
+                } @else if(sentEmails.length > 0){
+                    <div [routerLink]="['/dashboard/sent']" [queryParams]="{id: item.id}" class="email-card">
+                        <div class="top-details">
+                            <div class="to-subject">
+                                <h4 class="truncate-sentence">{{item.subject}}</h4>
+                                <span class="truncate-sentence">{{item.toEmails}}</span>
+                            </div>
+                            <span >{{item.sentAt | formatDate}}</span>
                         </div>
-                        <span >{{item.sentAt | formatDate}}</span>
+                        <p class="truncate-text" [innerHTML]="htmlToText(item.htmlContent)"></p>
                     </div>
-                    <p class="truncate-text" [innerHTML]="htmlToText(item.htmlContent)"></p>
-                </div>
+                } @else if(sentEmails.length == 0) {
+                    <span>No Emails sent.</span>
+                }
             }
         </div>
     </div>
