--- a/src/app/pages/dashboard/email-config/email-config.component.html
+++ b/src/app/pages/dashboard/email-config/email-config.component.html
@@ -34,6 +34,8 @@
        } @else {
         <button (click)="validateProvider()" [disabled]="!form.valid">Submit</button>
        }
+
+       <app-email-provider-docs/>
       </div>
     </div>
   </div>
