--- a/src/app/pages/dashboard/email-config/email-config.component.css
+++ b/src/app/pages/dashboard/email-config/email-config.component.css
@@ -29,6 +29,8 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
+    max-height: 80vh;
+    overflow-y: scroll;
 }
 
 .config-forms form{
