--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -84,7 +84,7 @@
                     <!-- Submit button with loading state -->
                     <div>
                         @if(!loading) {
-                            <button type="submit"
+                            <button (click)="register()" type="submit"
                                 class="w-full text-white bg-[#007AFF] hover:bg-[#312ECB] focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
                                 Register
                             </button>
