--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -32,8 +32,8 @@
                         <a href="#" class="text-sm font-medium text-primary-600 hover:underline dark:text-primary-500">Forgot password?</a>
                     </div> -->
 
-                    @if(true){
-                        <button type="submit" class="w-full text-white bg-[#007AFF] hover:bg-[#312ECB] focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
+                    @if(isLoading){
+                        <button type="submit" class="w-full flex justify-center align-center text-white bg-[#007AFF] hover:bg-[#312ECB] focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
                             <app-loader/>
                         </button>
 
