--- a/src/app/pages/dashboard/layout/layout.component.css
+++ b/src/app/pages/dashboard/layout/layout.component.css
@@ -1,6 +1,6 @@
 .layout {
     display: flex;
-    /* flex-direction: column; */
+    flex-direction: column;
     height: 100vh;
     overflow: hidden;
   }
