--- a/src/app/shared/nav-bar/nav-bar.component.css
+++ b/src/app/shared/nav-bar/nav-bar.component.css
@@ -1,4 +1,4 @@
-.nav{
+.nav, .nav-small{
     width: 33vh;
     height: 100%;
     border-right: 1px solid #ddd;
@@ -8,6 +8,55 @@
     justify-content: space-between;
     padding: 20px;
 }
+
+.nav-small{
+    width: 100%;
+}
+
+.small-nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #000000;
+}
+
+.small{
+    width: 30px;
+    height: 30px;
+    min-width: 30px;
+    border-radius: 50px;
+    background-color: #0057FF;
+    display: flex;
+    color: #fff;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+}
+
+.logout-small{
+    /* padding: 10px; */
+    font-size: 15px;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 50px;
+    color: red;
+    cursor: pointer;
+}
+
+.right, .left{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    color: #fff;
+}
+
+
+
 
 .first, .last{
     width: 100%;
@@ -119,4 +168,15 @@ ul li a:hover {
 
 .menu ul li a{
     font-weight: 400;
+}
+
+.activeRoute{
+    background-color: #000000;
+    color: #fff;
+}
+
+@media screen and (max-width: 768px) {
+    .nav{
+        display: none;
+    }
 }
