--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -49,13 +49,16 @@
                     <div>
                         <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
                         <input formControlName="password" type="password" name="password" id="password"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                            placeholder="••••••••" required>
-                        <span *ngIf="isFieldInvalid('password')" class="text-red-500 text-sm">
-                            {{getErrorMessage('password')}}
+                          class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                          placeholder="••••••••" required>
+                        <span class="text-sm" [ngClass]="{
+                          'text-red-500': getPasswordStrength() === 'Weak',
+                          'text-orange-500': getPasswordStrength() === 'Medium',
+                          'text-green-500': getPasswordStrength() === 'Strong'
+                        }">
+                          Password strength: {{ getPasswordStrength() }}
                         </span>
-                    </div>
-
+                      </div>
                     <!-- Confirm Password field -->
                     <div>
                         <label for="confirm-password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Confirm Password</label>
