--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -52,5 +52,6 @@
                 </form>
             </div>
         </div>
+        <a class="privacy" [routerLink]="['/privacy']">Privacy Policy</a>
     </div>
   </section>
