feat: added terms of service

--- a/src/app/pages/compliance/terms-of-use/terms-of-service.component.html
+++ b/src/app/pages/compliance/terms-of-use/terms-of-service.component.html
@@ -76,7 +76,7 @@
                   ${{tier.monthlyPrice}}<span class="text-base font-normal">/mo</span>
                 </p>
                 <p class="text-sm text-gray-500">
-                  or ${{tier.yearlyPrice * 12}}<span class="text-xs">/year</span>
+                  or ${{(tier.monthlyPrice * 12) - 10}}<span class="text-xs">/year</span>
                 </p>
               </div>
               <ul 
