--- a/src/app/pages/dashboard/email-config/email-config.component.css
+++ b/src/app/pages/dashboard/email-config/email-config.component.css
@@ -21,58 +21,80 @@
     font-size: 30px;
 }
 
+.head button{
+    background-color: #000000;
+    color: #fff;
+    font-size: 15px;
+    padding: 5px 20px;
+    border-radius: 10px;
+}
+
+.head button:first-child{
+    background-color: rgb(147, 205, 255);
+    color: #000000;
+}
+
+.action-button{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
 ::ng-deep .p-tag{
     padding: 3px 10px;
 }
 
-.config-forms{
+.providers{
     display: flex;
     flex-direction: column;
-    gap: 30px;
-    max-height: 80vh;
-    overflow-y: scroll;
+    gap: 20px;
+    margin-block: 40px;
 }
 
-.config-forms form{
-    display: grid;
-    grid-template-columns: repeat(2, 2fr);
-    margin-block-start: 7vh;
-    gap: 30px;
-}
-
-.input{
+.provider{
     display: flex;
-    flex-direction: column;
-    gap: 5px;
-}
-
-.input label{
-    font-size: 13px;
-    color: grey;
-}
-
-.input input{
-    height: 30px;
-    border: 1px solid #bbbbbb;
-    border-radius: 8px;
-    padding: 0 10px;
-}
-
-.input input:focus{
-    outline: 3px solid #0055ff70;
-    box-shadow: none;
-}
-
-.config-forms button{
-    background-color: #000;
-    border-radius: 8px;
-    height: 30px;
-    border: 0;
+    /* flex-direction: column; */
+    justify-content: space-between;
+    gap: 20px;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #000000;
+    border-radius: 10px;
     color: #fff;
-    cursor: pointer;
+}
+
+.provider .details{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+.action{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.action span{
+    width: 30px;
+    height: 30px;
+    border-radius: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
+    font-size: 13px;
+}
+
+.activeProvider{
+    background-color: rgb(0, 176, 0);
+    color: #fff;
+}
+
+.inactiveProvider{
+    background-color: rgb(0, 0, 0);
+    border: 2px solid #fff;
+    color: #fff;
 }
 
 @media screen and (max-width: 786px) {
