--- a/src/app/pages/dashboard/new-mail/new-mail.component.css
+++ b/src/app/pages/dashboard/new-mail/new-mail.component.css
@@ -8,6 +8,7 @@
     width: 100%;
     height: 100%;
     flex: 1;
+    max-inline-size: 80rem;
     display: flex;
     overflow-y: scroll;
     flex-direction: column;
